# Robyul2

./: .documentup.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gopkg.toml  README.md  _package.go  beta.go  bot.go  build.ps1  build.sh  circle.yml  config.dist.json  docs  eventproxy.go  format_go.sh  friend.go  glide.yaml  go.mod  go.sum  gometalinter.json  launcher.go  mkdocs.yml  rest.go  sharding.go
.github/: FUNDING.yml  issue_template.md  pull_request_template.md
_assets/: i18n.json  profile.html  providers.json
cache/: autoleaverGuilds.go  channels.go  elastic.go  friends.go  googleDrive.go  keen.go  logger.go  machinery.go  modulelists.go  polr.go  redisClient.go  session.go
channels/: broadcast.go
docs/: index.md  legacy.md  testimonials.md  tree.md
emojis/: emojis.go
generator/: profilegenerator.go
helpers/: _package.go  ascii.go  autoleaverGuilds.go  bansdiscordlistnet.go  bot_config.go  botlists.go  chatbot.go  cleverbot.go  cloudvision.go  collage.go  collections.go  config.go  db.go  defines.go  discord.go  elastic.go  embed.go  embedcode.go  emoji.go  emojis.go  eventlog.go  eventlog_ignore.go  eventlog_permissions.go  eventlog_revert.go  except.go  file.go  friend.go  gettext.go  gimmeproxy.go  glob.go  globs.go  hosting.go  images.go  lastfm.go  levels.go  md5.go  mdb.go  modulepermissions.go  net.go  numbers.go  (+20 more)
logger/: _package.go  logger.go  loglevels.go
logging/: filehook.go
metrics/: metrics.go
migrations/: 0_create_db.go  10_create_table_guild_announcements.go  (+100 more)
(+391 files in other folders)
